# rs-async-utf8-decoder

./: Cargo.toml  README.md  README.tpl
.github/workflows/: audit.yml  test.yml
benches/: hearts.txt  my_benchmark.rs
src/: decoder.rs  error.rs  lib.rs
